--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
   thymeleaf:
     cache: false
     encoding: UTF-8
+  servlet:
+    multipart:
+      # 默认1MB
+      max-file-size: 2MB
 
 #mybatis
 mybatis:
@@ -30,3 +34,9 @@ pagehelper:
 logging:
   level:
     com.etoak.mapper: debug
+
+# 自定义配置：文件上传和图片访问配置
+upload:
+  dir: d:/upload/
+  savePathPrefix: /pics/
+  mapping: /pics/**
