--- a/pom.xml
+++ b/pom.xml
@@ -58,54 +58,64 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
-<<<<<<< HEAD
         <!--Swagger2 end-->
 
         <!--   commons-fileupload     -->
-=======
 
-        <!-- commons-fileupload -->
->>>>>>> dev
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.3</version>
         </dependency>
-<<<<<<< HEAD
-        <!--   commons-lang3     stirng utlis-->
-=======
 
-        <!-- commons-lang3 -->
->>>>>>> dev
+        <!--   commons-lang3     stirng utlis-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
-<<<<<<< HEAD
-        <!--   commons-collections4 list包得校验 -->
-=======
 
-        <!-- commons-collections4 -->
->>>>>>> dev
+        <!--   commons-collections4 list包得校验 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>4.1</version>
         </dependency>
-<<<<<<< HEAD
-        <!--   commons-codec 加密解密工具 -->
-=======
 
-        <!-- commons-codec -->
->>>>>>> dev
+        <!--   commons-codec 加密解密工具 -->
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
-<<<<<<< HEAD
-=======
 
->>>>>>> dev
+        <!-- ActiveMQ相关依赖 -->
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>javax.jms-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jms</artifactId>
+            <version>5.2.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-pool</artifactId>
+            <version>5.15.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-broker</artifactId>
+            <version>5.15.3</version>
+            <!-- 将低版本的jackson-databind排除 -->
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
     </dependencies>
 
 
